<resources>
    <string name="app_name">My Application</string>
    <string name="password">Password</string>
    <string name="button">Button</string>
    <string name="username_or_email">Username or email</string>
    <string name="back">Back</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_account">Create account</string>
</resources>